# hodgeybot

./: Cargo.toml  README.md
src/: chess.rs  hodgey_chess.rs  jokes.rs  main.rs  quotes.rs
src/chess/: mod.rs  search.rs  test_fens.rs
src/chess/search/: piece_square_tables.rs  test_fens.rs
