[package]
name = "hodgeybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
shuttle-runtime = "0.46"
shuttle-serenity = "0.46"
tokio = "1"
tracing = "0.1"
rand = "0.8"